# conductor

./: .codex-review.toml  .envrc.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.conductor/: internal.toml
.cortex/: .discover.toml  config.toml  map.md  state.md
.cortex/doctrine/: 0001-readme.md  0002-audit-weak-points.md  0003-documentation-ownership.md  0004-engineering-principles.md  0005-git-workflow.md  0006-pre-implementation-checklist.md
.cortex/journal/: 2026-04-24-blindspot-followups-noted.md  2026-04-24-codex-plan-review.md  2026-04-24-llm-as-router-client.md  2026-04-26-codex-exec-wedge-trace.md  2026-04-28-pr-101-merged.md  (+25 more)
docs/: consumers.md
lib/: preflight.sh  review-comment.sh  script-sync-guard.sh
scripts/: branch-guard.sh  codex-review.sh  issue-claim-check.sh  merge-pr.sh  open-pr.sh  release.sh  run-pytest-in-venv.sh  touchstone-run.sh
tests/: conftest.py  test-find-python-bin.sh  test-merge-pr-worktree-handling.sh  test_adapters_subprocess.py  test_advisory_emission_gate.py  test_agent_template_drift.py  test_agent_wiring.py  test_banner.py  test_branch_guard.py  test_brief_preprocessor.py  test_cli.py  test_cli_auto.py  test_cli_auto_refresh.py  test_cli_contract.py  test_cli_delegation_ledger.py  test_cli_git_cleanup.py  test_cli_log_file.py  test_cli_models.py  test_cli_phase5.py  test_cli_swarm.py  test_cli_v02.py  test_codex_review_sentinel.py  test_codex_review_sentinel.sh  test_consumer_contract.py  test_credentials.py  test_custom_providers.py  test_deepseek.py  test_deepseek_migration.py  test_delegation_ledger.py  test_exec_completion.py  test_git_state.py  test_grounding.py  test_internal_config.py  test_kimi.py  test_kimi_migration.py  test_merge_pr_worktree_handling.py  test_migration_flow.py  test_network_profile.py  test_nightly_smoke_workflow.py  test_offline_fallback.py  (+21 more)
(+60 files in other folders)
