[project]
name = "conductor"
dynamic = ["version"]
description = "Pick an LLM, give it a job. Manual or auto routing across providers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Henry Modisett" }]
keywords = ["ai", "llm", "router", "cli", "moonshot", "kimi", "claude", "codex", "gemini", "ollama"]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.scripts]
conductor = "conductor.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/conductor/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/conductor"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
]

[tool.uv]
# Pin the dependency-resolution cutoff to a fixed date so `uv lock` /
# `uv sync` produce a byte-identical uv.lock for everyone, every time.
# Without this, uv records "now" in the lockfile metadata, which churns
# a 4-line diff on every machine, every day, with no actual dependency
# change. Bump this date deliberately when you want to refresh deps —
# it then becomes a single intentional "refresh deps" PR instead of
# accidental noise on every unrelated branch.
exclude-newer = "2026-04-25T00:00:00Z"

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
# Generated by hatch-vcs at build time; absent in fresh checkouts and
# editable installs, so don't require it for type-checking.
module = "conductor._version"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
